--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ params:
         toc: true
         license:
             enabled: true
-            default: Licensed under CC BY-NC-SA 4.0
+            default: Licensed under CC BY-NC-ND 4.0
 
     comments:
         enabled: false
