--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ paginate: 5
 title: Letters to Amy
 
 # GA Tracking ID
-googleAnalytics:
+googleAnalytics: G-NL4N20EN9H
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, es, de, nl
