--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,7 @@ theme: hugo-theme-stack
 paginate: 5
 title: Letters to Amy
 
-# GA Tracking ID
-googleAnalytics: G-NL4N20EN9H
+googleAnalytics: UA-203439332-1
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, es, de, nl
