--- a/config.yaml
+++ b/config.yaml
@@ -112,3 +112,7 @@ markup:
         startLevel: 2
     highlight:
         noClasses: false
+    # allow for line breaks in tables:
+    goldmark:
+      renderer:
+        unsafe: true
